ingress/catalog/catalog-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: catalog-ingress
  namespace: store-sandbox
  annotations:
    buildNumber: "1.0"
spec:
  rules:
      -  http:
          paths:
            - path: /auth
              pathType: Prefix
              backend:
                service:
                  name: auth-service
                  port:
                    number: 80
      -  http:
          paths:
            - path: /catalog
              pathType: Prefix
              backend:
                service:
                  name: catalog-service
                  port:
                    number: 80

status:
  loadBalancer: {}
